--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Github Pages Test</title>
+    <meta http-equiv="refresh" content="5; URL=https://www.bitdegree.org/" />
+    <title>SwaggerUI</title>
 </head>
 <body>
-Github Pages Test
 </body>
 </html>
